fix margin on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
   margin: auto;
   text-align: right;
   background-color: grey;
+  height: 5vh;
  }
 
 .link-btn {
@@ -30,6 +31,7 @@ code {
   text-align: center;
   padding: .5%;
   font-size: medium;
+  font: bold;
 }
 
 .link-btn:hover{
@@ -195,6 +197,10 @@ code {
     height: 5vh;
     width: 15%;
     text-align: center;
+  }
+  .link-btn {
+    margin-left: 10vw;
+    margin-right: 5vw;
   }
 }
 
